--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rvk = { git = "https://github.com/Iaiao/rvk", branch = "patch-1" }
+rvk = "0.19.0"
 tokio = { version = "0.2", features = [ "macros" ] }
 serde = { version = "1.0.118", features = [ "derive" ] }
 log = "0.4.11"
