Загрузка видео на ютуб

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ log = "0.4.11"
 simple_logger = "1.11.0"
 youtube_dl = "0.6.0"
 reqwest = "0.10.10"
+google-youtube3 = "1.0.13+20200402"
+yup-oauth2 = "^1.0"
+hyper = "^0.10"
+hyper-rustls = "^0.6"
