--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "progress": "^2.0.3",
     "stream-to-array": "^2.3.0",
     "vk-io": "^4.1.2",
+    "yesno": "^0.3.1",
     "youtube-dl": "^3.0.2"
   }
 }
