Revert "Удалил байт на комментарии"
This reverts commit f15df099a7e3034482406dc1aed8844b081d48f7.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "node index",
+    "introgen": "node introgen"
   },
   "author": "Iaiao",
   "license": "MIT",
