--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
   "author": "Iaiao",
   "license": "MIT",
   "dependencies": {
+    "connect-multiparty": "^2.2.0",
+    "cross-env": "^7.0.3",
+    "express": "^4.17.1",
     "google-auth-library": "^6.1.3",
     "googleapis": "^66.0.0",
     "jimp": "^0.16.1",
